force-app/main/default/objects/JBCXM__SurveyAllowedAnswers__c/JBCXM__SurveyAllowedAnswers__c.object-meta.xml
<CustomObject>
    <description>This is used to store allowed answers.</description>
    <label>Survey Allowed Answers</label>
    <nameField>
        <displayFormat>SuT-{0000}</displayFormat>
        <label>SurveyAllowedAnswers</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Allowed Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>