force-app/main/default/objects/JBCXM__SurveyAllowedAnswers__c/fields/JBCXM__AllowOtherLabel__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AllowOtherLabel__c</fullName>
    <label>AllowOther Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>