force-app/main/default/objects/JBCXM__SurveyAllowedAnswers__c/fields/JBCXM__AllowOtherPosition__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AllowOtherPosition__c</fullName>
    <label>Allow Other Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Below</fullName>
            </value>
            <value>
                <fullName>Beside</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>