force-app/main/default/objects/JBCXM__SurveyAllowedAnswers__c/fields/JBCXM__AnswerScore__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AnswerScore__c</fullName>
    <label>Answer Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>