force-app/main/default/objects/JBCXM__SurveyAllowedAnswers__c/fields/JBCXM__ClonedFrom__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ClonedFrom__c</fullName>
    <description>Maintains Id of the answerId from where this answer is cloned</description>
    <label>ClonedFrom</label>
    <length>80</length>
    <type>Text</type>
</CustomField>