force-app/main/default/objects/JBCXM__SurveyAllowedAnswers__c/fields/JBCXM__DefaultAnswer__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__DefaultAnswer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Answer</label>
    <type>Checkbox</type>
</CustomField>