force-app/main/default/objects/JBCXM__SurveyAllowedAnswers__c/fields/JBCXM__DefaultText__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__DefaultText__c</fullName>
    <label>Default Text</label>
    <length>160</length>
    <type>Text</type>
</CustomField>