force-app/main/default/objects/JBCXM__SurveyAllowedAnswers__c/fields/JBCXM__GroupAlignment__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__GroupAlignment__c</fullName>
    <label>Group Alignment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Horizontal</fullName>
            </value>
            <value>
                <fullName>Vertical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>