force-app/main/default/objects/JBCXM__SurveyAllowedAnswers__c/fields/JBCXM__GroupIcon__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__GroupIcon__c</fullName>
    <label>Group Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>