force-app/main/default/objects/JBCXM__SurveyAllowedAnswers__c/fields/JBCXM__GroupLabel__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__GroupLabel__c</fullName>
    <label>GroupLabel</label>
    <length>80</length>
    <type>Text</type>
</CustomField>