force-app/main/default/objects/JBCXM__SurveyAllowedAnswers__c/fields/JBCXM__OpenAnswerSize__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__OpenAnswerSize__c</fullName>
    <description>This is used for text type answer to store the size</description>
    <label>OpenAnswerSize</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>