force-app/main/default/objects/JBCXM__SurveyAllowedAnswers__c/fields/JBCXM__OpenCommentsColumnsSize__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__OpenCommentsColumnsSize__c</fullName>
    <description>This is used to store number of columns to be displayed while showing open comments</description>
    <label>OpenCommentsColumnsSize</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>