force-app/main/default/objects/JBCXM__SurveyAllowedAnswers__c/fields/JBCXM__OpenCommentsRowSize__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__OpenCommentsRowSize__c</fullName>
    <description>This is used to store row size of  comments type question</description>
    <label>OpenCommentsRowSize</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>