force-app/main/default/objects/JBCXM__SurveyAllowedAnswers__c/fields/JBCXM__SurveyMaster__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SurveyMaster__c</fullName>
    <label>Survey Master</label>
    <referenceTo>JBCXM__Survey__c</referenceTo>
    <relationshipLabel>Survey Allowed Answers</relationshipLabel>
    <relationshipName>SurveyAllowedAnswers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>