force-app/main/default/objects/JBCXM__SurveyAllowedAnswers__c/fields/JBCXM__TranslationFor__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__TranslationFor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>JBCXM__SurveyAllowedAnswers__c</referenceTo>
    <relationshipLabel>Parent</relationshipLabel>
    <relationshipName>TranslatedAnswers</relationshipName>
    <type>Lookup</type>
</CustomField>