force-app/main/default/objects/JBCXM__SurveyAllowedAnswers__c/listViews/JBCXM__All.listView-meta.xml
<ListView>
    <fullName>JBCXM__All</fullName>
    <columns>JBCXM__Title__c</columns>
    <columns>JBCXM__SurveyMaster__c</columns>
    <columns>JBCXM__SurveyQuestion__c</columns>
    <columns>JBCXM__DisplayOrder__c</columns>
    <columns>JBCXM__IsActive__c</columns>
    <columns>JBCXM__AllowOther__c</columns>
    <columns>JBCXM__AllowOtherLabel__c</columns>
    <columns>JBCXM__GroupIcon__c</columns>
    <columns>JBCXM__GroupLabel__c</columns>
    <columns>JBCXM__UserResponseCount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>